# whisper_flutter_new

./: .gitignore  CHANGELOG.md  LICENSE  README.md  analysis_options.yaml  ffigen.yaml  pubspec.yaml  renovate.json
android/: build.gradle  gradle.properties  settings.gradle
android/src/main/: AndroidManifest.xml
example/: .metadata  analysis_options.yaml  pubspec.yaml
example/android/: .gitignore  build.gradle  gradle.properties  settings.gradle
example/android/app/: build.gradle
example/android/app/src/main/: AndroidManifest.xml
example/android/app/src/main/kotlin/com/example/whisper/: MainActivity.kt
example/android/gradle/wrapper/: gradle-wrapper.properties
example/ios/Runner/: Info.plist
example/ios/Runner.xcodeproj/: project.pbxproj
example/lib/: main.dart  providers.dart  record_page.dart  whisper_audio_convert.dart  whisper_controller.dart  whisper_result.dart
example/macos/Flutter/: GeneratedPluginRegistrant.swift
example/macos/Runner/: DebugProfile.entitlements  Release.entitlements
example/macos/Runner.xcodeproj/: project.pbxproj
example/macos/Runner/Configs/: AppInfo.xcconfig
ios/: whisper_flutter_new.podspec
ios/Classes/: whisper_flutter_new.cpp
ios/Classes/whisper.cpp/: .gitignore
lib/: download_model.dart  whisper_bindings_generated.dart  whisper_flutter_new.dart
lib/bean/: _models.dart  request_bean.dart  request_bean.freezed.dart  request_bean.g.dart  response_bean.dart  response_bean.freezed.dart  response_bean.g.dart
macos/: whisper_flutter_new.podspec
macos/Classes/json/: json.hpp
src/: CMakeLists.txt  main.cpp  main.h
